Fixing help modal/page bug

--- a/pages/covid.htm
+++ b/pages/covid.htm
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COVID-19 Tracker</title>
 
-    <script src="../../includes/modal.js" defer></script>
+    <script src="../includes/modal.js" defer></script>
 
-    <script src="../../js/api/covid.js" defer></script>
-    <script src="../../js/navbar.js" defer></script>
-    <script src="../../js/search.js" defer></script>
+    <script src="../js/api/covid.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
+    <script src="../js/search.js" defer></script>
 
-    <link rel="stylesheet" href="../../css/api/covid.css" />
-    <link rel="stylesheet" href="../../css/modal.css" />
-    <link rel="stylesheet" href="../../css/navbar.css" />
+    <link rel="stylesheet" href="../css/api/covid.css" />
+    <link rel="stylesheet" href="../css/modal.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
 
 
     <!--Bootstrap imports-->
@@ -49,7 +49,7 @@
   class="navbar navbar-expand-lg navbar navbar-dark bg-dark"
   id="navbar"
   >
-  <a class="navbar-brand" href="../../index.htm"><img src="../../images/navbar/logo.png" id="logo"/></a>
+  <a class="navbar-brand" href="../index.htm"><img src="../images/navbar/logo.png" id="logo"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
